--- a/index.html
+++ b/index.html
@@ -1097,13 +1097,13 @@
 					Contacts
 			</p>
 			<p class="mbr-text fLink mbr-white mbr-fonts-style display-7">
-					Share Us
+					Share
 			</p>
 		</div>
 		<div class="container">
 			<div class="mbr-col-sm-12 align-center">
 				<p class="mbr-text mbr-white mbr-fonts-style copyright display-6">
-					© Copyright 2019 Home Architects - All Rights Reserved
+					© Copyright 2019 Architects - All Rights Reserved
 				</p>
 			</div>
 		</div>
